# amazon-note

./: .gitignore  CLAUDE.md  README.md  main.py  plan.md  pyproject.toml
.serena/: project.yml
.spec-workflow/: session.json
checklists/: note_quality_framework.md  persona_validation.md  seo_optimization.md  template_specific_quality.md
docs/: complete_workflow.md  complete_workflow_unified.md  implementation_proposal.md  note-markdown-rule.md  note_strategy_comprehensive.md  pa_api_implementation_guide.md  roadmap.md  template_usage_guide.md  troubleshooting.md  troubleshooting_comprehensive.md  troubleshooting_pa_api.md  workflow_improvements_2025-09-11.md  アフィリエイト記事：商品数と収益性_.md
guides/: affiliate_integration.md  gemini_research.md  manual_research.md  perplexity_research_guide.md  prompt_optimization.md
prompts/: article_finalization.md  article_generation.md  content_optimization.md  persona_creation.md  prompt_generation.md  quality_check.md  research_integration.md
scripts/: pa_api_quality_check.py
tests/: test_advanced_sakura_detector.py  test_error_handling.py  test_error_handling_green.py  test_integration_workflow.py  test_pa_api_client.py  test_performance.py  test_performance_green.py  test_playwright_automation.py  test_product_dataclass.py  test_sakura_detector.py
tools/: README.md  __init__.py  affiliate_link_generator.py  affiliate_link_generator_integrated.py  models.py  note_article_converter.py  pa_api_client.py  playwright_automation.py  productivity_helpers.md  sakura_detector.py
workflows/: sakura_validation.md
(+96 files in other folders)
