[project]
name = "amazon-note-rank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.25",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "psutil>=7.0.0",
    "python-amazon-paapi>=5.0.1",
    "pyyaml>=6.0.2",
    "scipy>=1.16.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
